fixed wrapper width on mobile

--- a/public/css/custom.css
+++ b/public/css/custom.css
@@ -214,3 +214,22 @@ max-height: 42px;
 .segment .title{
     text-align: center;
 }
+
+@media screen and (max-width: 28em) {
+    .px-area, .em-area {
+        background-color: #efefef;
+        -webkit-border-bottom-right-radius: 3px;
+        -webkit-border-bottom-left-radius: 3px;
+        -moz-border-radius-bottomright: 3px;
+        -moz-border-radius-bottomleft: 3px;
+        border-bottom-right-radius: 3px;
+        border-bottom-left-radius: 3px;
+        padding: 10px;
+        font-size: 12px;
+        width: 100%;
+        resize: none;
+        height: 85%;
+        color: #bfbfbf;
+        position: absolute;
+    }
+}
